5.3/15d5dfaf4adb9e4d38fd6d4c88590817dc32c7cf
sparc: fix unknown type name u_int in uapi header

'u_int' is a shorthand that is only available in the kernel space
because it is defined in include/linux/types.h, which is not exported
to the user space.

You cannot use it in uapi headers even if you include <linux/types.h>

Detected by compile-testing exported headers.

./usr/include/asm/openpromio.h:16:2: error: unknown type name ‘u_int’
  u_int oprom_size;  /* Actual size of the oprom_array. */
  ^~~~~

Signed-off-by: Masahiro Yamada <yamada.masahiro@socionext.com>
Signed-off-by: David S. Miller <davem@davemloft.net>

